@@ -10,6 +10,7 @@ import sk.sporixx.model.SavingGoal;
 import sk.sporixx.repository.AccountAccessRepository;
 import sk.sporixx.repository.AccountRepository;
 import sk.sporixx.repository.SavingGoalRepository;
+import sk.sporixx.util.Localization;
 import sk.sporixx.util.ValidationUtil;
 
 import java.time.LocalDate;
@@ -34,7 +35,7 @@ public class AccountServiceImpl implements AccountService {
     }
 
     @Override
-    public Account createPrivateAccount(String description, double initialAmount) {
+    public void createPrivateAccount(String description, double initialAmount) {
         logger.info("Creating private account for userId={}", SessionManager.getInstance().getCurrentUserId());
 
         validateAccountInput(description, initialAmount);
@@ -52,12 +53,11 @@ public class AccountServiceImpl implements AccountService {
         grantAccessToParents(saved);
 
         logger.info("Private account created: id={}", saved.getId());
-        return saved;
     }
 
     @Override
-    public Account createSavingAccount(String description, double initialAmount,
-                                       double targetAmount, LocalDate targetDate) {
+    public void createSavingAccount(String description, double initialAmount,
+                                    double targetAmount, LocalDate targetDate) {
 
         validateAccountInput(description, initialAmount);
 
@@ -96,7 +96,6 @@ public class AccountServiceImpl implements AccountService {
         grantAccessToParents(saved);
 
         logger.info("Saving account created: id={}, goal={}", saved.getId(), description);
-        return saved;
     }
 
     @Override
@@ -115,7 +114,7 @@ public class AccountServiceImpl implements AccountService {
         accountRepository.deactivateById(accountId);
         SessionManager.getInstance().removeAccount(accountId);
 
-        // Zmaž account_access záznamy pre tento účet
+        // zmaže account_access záznamy pre tento účet
         accountAccessRepository.revokeAllAccessForAccount(accountId);
 
         logger.info("Account deactivated: id={}", accountId);
@@ -163,21 +162,21 @@ public class AccountServiceImpl implements AccountService {
             throw new AccountException("account.error.not_saving_account");
         }
 
-        // Skontroluj že targetAmount > currentAmount
+        // kontrola, že targetAmount > currentAmount
         if (targetAmount - account.getCurrentBalance() < 0.01) {
             throw new AccountException("account.error.target_below_initial");
         }
 
         try {
-            // Aktualizuj description účtu
+            // aktualizuje description účtu
             account.setDescription(description);
             accountRepository.update(account);
 
-            // Aktualizuj goal
+            // aktualizuje goal
             List<SavingGoal> goals = savingGoalRepository
                     .findActiveByAccountId(accountId);
             if (!goals.isEmpty()) {
-                SavingGoal goal = goals.get(0);
+                SavingGoal goal = goals.getFirst();
                 savingGoalRepository.updateTargetAmount(goal.getId(), targetAmount);
                 savingGoalRepository.updateTargetDate(goal.getId(),
                         targetDate.atStartOfDay());
@@ -193,7 +192,7 @@ public class AccountServiceImpl implements AccountService {
         }
     }
 
-    // Helper metódy
+    // helper metódy
     private void validateAccountInput(String description, double initialAmount) {
         if (!ValidationUtil.isNotBlank(description)) {
             throw new AccountException("account.error.description_required");
@@ -205,7 +204,8 @@ public class AccountServiceImpl implements AccountService {
 
     private Account buildAccount(int accountTypeId, String description,
                                  double initialAmount) {
-        // Region a currency berieme z Main Accountu
+
+        // region berieme z main accountu
         Account mainAccount = SessionManager.getInstance().getAccounts().stream()
                 .filter(a -> a.getAccountTypeId() == Account.MAIN_ACCOUNT)
                 .findFirst()
@@ -215,7 +215,6 @@ public class AccountServiceImpl implements AccountService {
                 .ownerUserId(SessionManager.getInstance().getCurrentUserId())
                 .regionId(mainAccount.getRegionId())
                 .accountTypeId(accountTypeId)
-                .defaultCurrencyCode(mainAccount.getDefaultCurrencyCode())
                 .description(description)
                 .initialBalance(initialAmount)
                 .currentBalance(initialAmount)
@@ -250,7 +249,6 @@ public class AccountServiceImpl implements AccountService {
                 .ownerUserId(SessionManager.getInstance().getCurrentUserId())
                 .regionId(mainAccount.getRegionId())
                 .accountTypeId(Account.SAVING_ACCOUNT)
-                .defaultCurrencyCode(mainAccount.getDefaultCurrencyCode())
                 .description(description)
                 .initialBalance(initialAmount)
                 .currentBalance(initialAmount)
@@ -290,7 +288,7 @@ public class AccountServiceImpl implements AccountService {
 
             if (ownerAccounts.isEmpty()) return;
 
-            // Nájdi rodičov cez existujúce účty
+            // nájde rodičov cez existujúce účty
             Set<Integer> parentIds = ownerAccounts.stream()
                     .flatMap(a -> accountAccessRepository.findByAccountId(a.getId()).stream())
                     .map(AccountAccess::getUserId)
@@ -305,7 +303,6 @@ public class AccountServiceImpl implements AccountService {
         } catch (Exception e) {
             logger.warn("Failed to grant parent access for new account id={}",
                     newAccount.getId(), e);
-            // Nehodíme exception — vytvorenie účtu nesmie zlyhať kvôli tomuto
         }
     }
 
@@ -314,10 +311,21 @@ public class AccountServiceImpl implements AccountService {
         logger.info("Loading saving goal for accountId={}", accountId);
         try {
             List<SavingGoal> goals = savingGoalRepository.findActiveByAccountId(accountId);
-            return goals.isEmpty() ? Optional.empty() : Optional.of(goals.get(0));
+            return goals.isEmpty() ? Optional.empty() : Optional.of(goals.getFirst());
         } catch (Exception e) {
             logger.error("Failed to load saving goal for accountId={}", accountId, e);
             throw new AccountException("error.db_error", e);
         }
+    }
+
+    @Override
+    public String getLocalizedDescription(Account account) {
+        if (account.isMainAccount()) {
+            return Localization.get("account.default.main_description");
+        }
+        if (account.isEmergencyFund()) {
+            return Localization.get("account.default.emergency_description");
+        }
+        return account.getDescription();
     }
 }
